--- a/wishlist/travel_wishlist/templates/travel_wishlist/visited.html
+++ b/wishlist/travel_wishlist/templates/travel_wishlist/visited.html
@@ -1,3 +1,6 @@
+{% extends 'travel_wishlist/base.html' %}
+{% block content %}
+
 <h2>Places you have visited</h2>
 
 
@@ -16,4 +19,4 @@
 <p>You have not visited any placed yet</p>
 {% endif %}
 
-<a href="{% url 'place_list' %}">Your wishlist</a>
+{% endblock %}
