--- a/wishlist/travel_wishlist/templates/travel_wishlist/base.html
+++ b/wishlist/travel_wishlist/templates/travel_wishlist/base.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
     </head>
     
-    <h1>Where would you like to go?</h1>
+    <h1 id="site-header">Where would you like to go?</h1>
 
     <body>
         {% block content %}
